--- a/package.json
+++ b/package.json
@@ -11,15 +11,33 @@
     "make": "electron-forge make"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@types/sqlite3": "^5.1.0",
+    "auto-launch": "^5.0.6",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0",
+    "chokidar": "^4.0.3",
+    "clipboardy": "^4.0.0",
+    "dns2": "^2.1.0",
     "electron-next": "^3.1.5",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.1.0",
+    "exifr": "^7.1.3",
+    "face-api.js": "^0.22.2",
+    "geoip-lite": "^1.4.10",
+    "natural": "^8.1.0",
     "next": "^14.0.0",
+    "node-notifier": "^10.0.1",
     "ollama": "^0.5.16",
-    "puppeteer": "^20.0.0",
+    "puppeteer": "^20.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reverse-image-search-google": "^1.0.3",
+    "screenshot-desktop": "^1.15.1",
+    "sentiment": "^5.0.2",
+    "sharp": "^0.34.3",
+    "sqlite3": "^5.1.7",
+    "whois": "^2.15.0",
     "zustand": "^4.3.0"
   },
   "devDependencies": {
