--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "trust-dating-overlay",
+  "name": "smart-dating-assistant",
+  "productName": "Smart Dating Assistant",
   "version": "1.0.0",
+  "description": "Your privacy-focused dating conversation helper",
   "main": "build/main.js",
+  "homepage": "https://github.com/abhi-yo/trust-dating",
+  "author": {
+    "name": "Smart Dating Assistant",
+    "email": "support@smartdatingassistant.com"
+  },
   "scripts": {
     "start": "electron-forge start",
     "build-ts": "tsc",
     "dev": "concurrently \"pnpm next-dev\" \"electron-forge start\"",
     "next-dev": "next dev renderer",
+    "build-renderer": "cd renderer && NODE_ENV=production next build",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build": "pnpm run build-ts && pnpm run build-renderer",
+    "dist": "pnpm run build && electron-forge make"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@types/sqlite3": "^5.1.0",
     "auto-launch": "^5.0.6",
     "axios": "^1.4.0",
-    "cheerio": "^1.0.0",
     "chokidar": "^4.0.3",
     "clipboardy": "^4.0.0",
-    "dns2": "^2.1.0",
     "electron-next": "^3.1.5",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.1.0",
-    "exifr": "^7.1.3",
-    "face-api.js": "^0.22.2",
-    "geoip-lite": "^1.4.10",
     "natural": "^8.1.0",
     "next": "^14.0.0",
     "node-notifier": "^10.0.1",
-    "ollama": "^0.5.16",
-    "puppeteer": "^20.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reverse-image-search-google": "^1.0.3",
     "screenshot-desktop": "^1.15.1",
     "sentiment": "^5.0.2",
-    "sharp": "^0.34.3",
     "sqlite3": "^5.1.7",
-    "whois": "^2.15.0",
     "zustand": "^4.3.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-dmg": "^7.8.2",
     "@electron-forge/maker-rpm": "^7.8.1",
     "@electron-forge/maker-squirrel": "^7.8.1",
     "@electron-forge/maker-zip": "^7.8.1",
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.0.0",
     "concurrently": "^8.0.0",
     "electron": "^37.2.4",
+    "electron-packager": "^17.1.2",
     "typescript": "^5.0.0"
   }
 }
