--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/sentiment": "^5.0.4",
     "auto-launch": "^5.0.6",
     "axios": "^1.4.0",
     "chokidar": "^4.0.3",
