--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-next": "^3.1.5",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.1.0",
+    "lucide-react": "^0.536.0",
     "natural": "^8.1.0",
     "next": "^14.0.0",
     "node-notifier": "^10.0.1",
