--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
       - uses: pnpm/action-setup@v4
         with:
           version: 9
-          run_install: true
+      - name: Install deps
+        run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm run build
       - name: Publish (macOS arm64)
@@ -40,10 +42,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
       - uses: pnpm/action-setup@v4
         with:
           version: 9
-          run_install: true
+      - name: Install deps
+        run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm run build
       - name: Publish (macOS x64)
@@ -56,10 +60,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
       - uses: pnpm/action-setup@v4
         with:
           version: 9
-          run_install: true
+      - name: Install deps
+        shell: bash
+        run: pnpm install --frozen-lockfile
       - name: Build
         shell: bash
         run: pnpm run build
