--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,10 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
       - name: Enable corepack
         run: corepack enable
+      - name: Prepare pnpm 9
+        run: corepack prepare pnpm@9 --activate
       - name: Install deps
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
@@ -47,12 +45,10 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
       - name: Enable corepack
         run: corepack enable
+      - name: Prepare pnpm 9
+        run: corepack prepare pnpm@9 --activate
       - name: Install deps
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
@@ -68,13 +64,12 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
       - name: Enable corepack
         shell: bash
         run: corepack enable
+      - name: Prepare pnpm 9
+        shell: bash
+        run: corepack prepare pnpm@9 --activate
       - name: Install deps
         shell: bash
         run: pnpm install --frozen-lockfile --prefer-offline
