--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,13 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - name: Install pnpm 9
-        run: npm i -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      - name: pnpm version
+        run: pnpm -v
       - name: Install deps
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
@@ -43,8 +48,13 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - name: Install pnpm 9
-        run: npm i -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      - name: pnpm version
+        run: pnpm -v
       - name: Install deps
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
@@ -54,22 +64,26 @@ jobs:
 
   windows-x64:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-      - name: Install pnpm 9
-        shell: bash
-        run: npm i -g pnpm@9
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      - name: pnpm version
+        run: pnpm -v
       - name: Install deps
-        shell: bash
         run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
-        shell: bash
         run: pnpm run build
       - name: Publish (Windows x64)
-        shell: bash
         run: npx electron-forge publish --platform=win32 --arch=x64
 
