--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,72 +18,18 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  mac-arm64:
-    runs-on: macos-14  # Apple Silicon
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-      - name: pnpm version
-        run: pnpm -v
-      - name: Install deps
-        run: pnpm install --frozen-lockfile --prefer-offline
-      - name: Build
-        run: pnpm run build
-      - name: Publish (macOS arm64)
-        run: npx electron-forge publish --platform=darwin --arch=arm64
-
-  mac-x64:
-    runs-on: macos-13  # Intel
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-      - name: pnpm version
-        run: pnpm -v
-      - name: Install deps
-        run: pnpm install --frozen-lockfile --prefer-offline
-      - name: Build
-        run: pnpm run build
-      - name: Publish (macOS x64)
-        run: npx electron-forge publish --platform=darwin --arch=x64
-
   windows-x64:
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
-      - name: pnpm version
-        run: pnpm -v
+          cache: 'npm'
       - name: Install deps
-        run: pnpm install --frozen-lockfile --prefer-offline
+        run: npm ci
       - name: Build
-        run: pnpm run build
+        run: npm run build
       - name: Publish (Windows x64)
         run: npx electron-forge publish --platform=win32 --arch=x64
 
