ci(windows): use npm install instead of npm ci (no lockfile); remove npm cache binding

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release (Forge → GitHub Releases)
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
   workflow_dispatch:
 
 permissions:
@@ -25,11 +25,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
       - name: Install deps
-        run: npm ci
+        run: npm install --no-audit --no-fund
       - name: Build
         run: npm run build
       - name: Publish (Windows x64)
         run: npx electron-forge publish --platform=win32 --arch=x64
-
